--- a/final/.env
+++ b/final/.env
@@ -6,3 +6,4 @@ EMAIL_PASS=aykhlankplwwneoc
 JWT_SECRET=mySuperStrongRandomSecretKey123!
 CHAPA_SECRET_KEY=CHASECK-Nv4Zkfr6JFLa7e2WJD5hRfoNzoEPfurw    # your Chapa secret key (test/live)
 BASE_URL=http://localhost:5000      # your server address (used for callback URLs)
+PORT=5000
