--- a/final/.env
+++ b/final/.env
@@ -8,4 +8,4 @@ CHAPA_SECRET_KEY=CHASECK-Nv4Zkfr6JFLa7e2WJD5hRfoNzoEPfurw    # your Chapa secret
 BASE_URL=http://localhost:5000      # your server address (used for callback URLs)
 PORT=5000
 # MONGO_URI=mongodb://127.0.0.1:27017/furnitures
-MONGO_URI=mongodb://127.0.0.1:27017/furnitures
+MONGO_URI=mongodb+srv://admin:admin@cluster0.ddriucv.mongodb.net/furnitures=Cluster0
