--- a/final/.env
+++ b/final/.env
@@ -9,4 +9,5 @@ BASE_URL=http://localhost:5000      # your server address (used for callback URL
 PORT=5000
 # MONGO_URI=mongodb://127.0.0.1:27017/furnitures
 MONGO_URI=mongodb+srv://admin:admin@cluster0.ddriucv.mongodb.net/furnitures
+RESEND_API_KEY=re_ESQuegMP_GTRqo3LBYudjcJuWLu7Pfxue
 # mongodb+srv://admin:admin@cluster0.ddriucv.mongodb.net/furnitures?retryWrites=true&w=majority
