--- a/final/.env
+++ b/final/.env
@@ -5,7 +5,7 @@ EMAIL_USER=renatomiki568@gmail.com
 EMAIL_PASS=aykhlankplwwneoc
 JWT_SECRET=mySuperStrongRandomSecretKey123!
 CHAPA_SECRET_KEY=CHASECK-Nv4Zkfr6JFLa7e2WJD5hRfoNzoEPfurw    # your Chapa secret key (test/live)
-BASE_URL=http://localhost:5000      # your server address (used for callback URLs)
+BASE_URL=https://test-8meh.onrender.com    # your server address (used for callback URLs)
 PORT=5000
 # MONGO_URI=mongodb://127.0.0.1:27017/furnitures
 # mongodb+srv://admin:admin@cluster0.ddriucv.mongodb.net/furnitures
